# OpenGL-Learning

./: .gitignore  CMakeLists.txt  build.sh  run.sh
shaders/: fragmentshader.fs  vertexshader.vs
src/: CMakeLists.txt  camera.hpp  main.cpp  shader.cpp  shader.hpp
